--- a/man/formail.man
+++ b/man/formail.man
@@ -1,6 +1,6 @@
 Please read the README file in this directory first.
 .ex
-.Id $Id: formail.man,v 1.27 1994/06/16 16:37:15 berg Exp $
+.Id $Id: formail.man,v 1.31 1994/08/18 13:44:40 berg Exp $
 .TH FORMAIL 1 \*(Dt BuGless
 .na
 .SH NAME
@@ -9,7 +9,7 @@ formail \- mail (re)formatter
 .B formail
 .RI [ "\fB\@FM_SKIP@\fPskip" ]
 .RI [ "\fB\@FM_TOTAL@\fPtotal" ]
-.RB [ \-@FM_BOGUS@@FM_CONCATENATE@@FM_FORCE@@FM_REPLY@@FM_KEEPB@@FM_TRUST@@FM_NOWAIT@@FM_EVERY@@FM_DIGEST@@FM_QUIET@@FM_BABYL@ ]
+.RB [ \-@FM_BOGUS@@FM_CONCATENATE@@FM_FORCE@@FM_REPLY@@FM_KEEPB@@FM_TRUST@@FM_NOWAIT@@FM_EVERY@@FM_DIGEST@@FM_QUIET@@FM_BABYL@@FM_BERKELEY@ ]
 .RB [ \-@FM_QPREFIX@
 .IR prefix ]
 .if n .ti +0.5i
@@ -69,6 +69,11 @@ Don't escape any bogus mailbox headers (i.e. lines starting with `@FROM@').
 .TP
 .I "\fB\-@FM_QPREFIX@\fP prefix"
 Define a different quotation prefix.  If unspecified it defaults to `@ESCAP@'.
+.TP
+.B \-@FM_BERKELEY@
+Assume traditional Berkeley mailbox format, ignoring any
+.B Content-Length:
+fields.
 .TP
 .B \-@FM_CONCATENATE@
 Concatenate continued fields in the header.  Might be convenient when
@@ -174,7 +179,7 @@ onto the header in any case.
 .TP
 .I "\fB\-@FM_REN_INSERT@\fP headerfield"
 Same as
-.BR \-@FM_ADD_IFNOT@ ,
+.BR \-@FM_ADD_ALWAYS@ ,
 except that any existing similar fields are renamed by prepending
 an ``@OLD_PREFIX@'' prefix.  If
 .I headerfield
@@ -183,7 +188,9 @@ consists only of a field-name, it will not be appended.
 .I "\fB\-@FM_DEL_INSERT@\fP headerfield"
 Same as
 .BR \-@FM_REN_INSERT@ ,
-except that any existing similar fields are simply removed.
+except that any existing similar fields are simply removed.  If
+.I headerfield
+consists only of a field-name, it effectively deletes the field.
 .TP
 .I "\fB\-@FM_FIRST_UNIQ@\fP headerfield"
 Make the first occurrence of this field unique, and thus delete all
@@ -247,21 +254,28 @@ use:
 formail \-@FM_DIGEST@@FM_SPLIT@ <old_mailbox >>new_mailbox
 .RE
 .PP
-Or, alternatively, if you have a very tolerant mailer:
+Or, if you have a very tolerant mailer:
 .RS
 formail \-@FM_ADD_IFNOT@ Date: \-@FM_DIGEST@@FM_SPLIT@ <old_mailbox >>new_mailbox
 .RE
-.SH MISCELLANEOUS
-The regular expression that is used to find `real' postmarks is:
+.PP
+To extract the header from a message:
 .RS
-"\en\en@FROM@[\et ]*[^\et\en ]+[\et ]+[^\en\et ]"
+formail \-@FM_EXTRC_KEEP@ ""
+.RE
+or
+.RS
+sed \-e '/^$/ q'
 .RE
 .PP
-If a
-.B Content-Length:
-field is found in a header, formail will copy the number of specified bytes in
-the body verbatim before resuming the regular scanning for message boundaries
-(except when splitting digests).
+To extract the body from a message:
+.RS
+formail \-@FM_DEL_INSERT@ ""
+.RE
+or
+.RS
+sed \-e '1,/^$/ d'
+.RE
 .SH "SEE ALSO"
 .na
 .nh
@@ -269,6 +283,7 @@ the body verbatim before resuming the regular scanning for message boundaries
 .BR binmail (1),
 .BR sendmail (8),
 .BR procmail (1),
+.BR sed (1),
 .BR sh (1)
 .hy
 .ad
@@ -304,26 +319,42 @@ Invalid field-name: "x"
 The specified field-name "x" contains control characters, or cannot be a
 partial field-name for this option.
 .SH WARNINGS
-You can save yourself and others a lot of mischief if you try to avoid using
+You can save yourself and others a lot of grief if you try to avoid using
 this autoreply feature on mails coming through mailinglists.  Depending
 on the format of the incoming mail (which in turn depends on both the
 original sender's mail agent and the mailinglist setup) formail could
-decide to generate an autoreply header that replies to the list (if
-the original sender was careful enough though, formail will be able to pick
-his/her address, instead of the list's).  Now if the list is not intelligent
-enough (most aren't) this autoreply will be widely distributed.
+decide to generate an autoreply header that replies to the list.
 .SH BUGS
 When formail has to generate a leading `@FROM@' line it normally will contain
 the current date.  If formail is given the option `\-@FM_ADD_IFNOT@ Date:',
 it will use the date from the `Date:' field in the header (if present).
 However, since formail copies it verbatim, the format will differ from that
 expected by most mail readers.
+.PP
+If formail is instructed to delete or rename the leading `@FROM@' line, it
+will not automatically regenerate it as usual.  To force formail to regenerate
+it in this case, include \fB\-@FM_ADD_IFNOT@ '@FROM@'\fP.
+.PP
+If formail is not called as the first program in a pipe and it is told to
+split up the input in several messages, then formail will not terminate until
+the program it receives the input from terminates itself.
 .SH MISCELLANEOUS
 Formail is eight-bit clean.
 .PP
 When formail has to determine the sender's address, every RFC 822 conforming
 mail address is allowed.  Formail will always strip down the address to
 its minimal form (deleting excessive comments and whitespace).
+.PP
+The regular expression that is used to find `real' postmarks is:
+.RS
+"\en\en@FROM@[\et ]*[^\et\en ]+[\et ]+[^\en\et ]"
+.RE
+.PP
+If a
+.B Content-Length:
+field is found in a header, formail will copy the number of specified bytes in
+the body verbatim before resuming the regular scanning for message boundaries
+(except when splitting digests or Berkeley mailbox format is assumed).
 .SH NOTES
 Calling up formail with the \-@HELPOPT1@ or \-@HELPOPT2@ options will cause
 it to display a command-line help page.
