--- a/man/lockfile.man
+++ b/man/lockfile.man
@@ -1,6 +1,6 @@
 Please read the README file in this directory first.
 .ex
-.Id $Id: lockfile.man,v 1.11 1994/05/26 14:12:02 berg Exp $
+.Id $Id: lockfile.man,v 1.12 1994/08/04 17:05:05 berg Exp $
 .TH LOCKFILE 1 \*(Dt BuGless
 .na
 .SH NAME
@@ -39,7 +39,7 @@ succeed.  You can specify the number of
 to do until failure is returned.
 If the number of
 .I retries
-is -1 (default, i.e.
+is \-1 (default, i.e.
 .BR \-r\-1 )
 lockfile will retry forever.
 .PP
@@ -94,7 +94,7 @@ lockfile important.lock
 \&.\|.\|.
 access_"important"_to_your_hearts_content
 \&.\|.\|.
-rm -f important.lock
+rm \-f important.lock
 \&.\|.\|.
 .RE
 Now if all the scripts that access "important" follow this guideline, you
