--- a/man/procmailex.man
+++ b/man/procmailex.man
@@ -1,12 +1,12 @@
 Please read the README file in this directory first.
 .ex
-.Id $Id: procmailex.man,v 1.31 1994/06/14 12:03:19 berg Exp $
+.Id $Id: procmailex.man,v 1.36 1994/08/30 16:15:48 berg Exp $
 .TH PROCMAILEX 5 \*(Dt BuGless
 .na
 .SH NAME
 procmailex \- procmail rcfile examples
 .SH SYNOPSIS
-.B $HOME/@PROCMAILRC@ examples
+.B @PROCMAILRC@ examples
 .ad
 .SH DESCRIPTION
 For a description of the rcfile format see
@@ -60,24 +60,21 @@ An equivalent, but slightly slower solution that accomplishes the same:
 * ^Subject:.*compilers
 ! william@somewhere.edu
 
-   :0
-   * ^From.*peter
-   * ^Subject:.*compilers
-   petcompil
+:0
+* ^From.*peter
+* ^Subject:.*compilers
+petcompil
 .Ex
-If your system doesn't generate or generates incorrect leading `From '
+If your system doesn't generate or generates incorrect leading `@FROM@'
 lines on every mail, you can fix this by calling up procmail with
 the \-@FROMWHOPT@@REFRESH_TIME@ option.  To fix the same problem by
 different means, you could have inserted the following two
 recipes above all other recipes in your rcfile.  They will filter the header
-of any mail through the first formail which will strip any leading `From '
-line, and then through the second formail which then regenerates it.
-.Sx 5
+of any mail through formail which will strip any leading `@FROM@', and
+automatically regenerates it subsequently.
+.Sx 2
 :0 @FILTER@@PASS_HEAD@@WAIT_EXIT@
-| formail \-@FM_DEL_INSERT@ "From "
-
-:0 @FILTER@@PASS_HEAD@@WAIT_EXIT@
-| formail
+| formail \-@FM_DEL_INSERT@ "@FROM@" \-@FM_ADD_IFNOT@ "@FROM@"
 .Ex
 Add the headers of all messages that didn't come from the postmaster
 to your private header collection (for
@@ -118,21 +115,22 @@ mail) into the file postm, using postm.lock as the locallockfile.
 postm
 .Ex
 A simple autoreply recipe.  It makes sure that neither mail from any daemon
-(like bouncing mail or mail from mailing-lists), nor mail coming from yourself
-will be autoreplied.  If this precaution would not be taken, disaster could
-result (`ringing' mail).  In order for this recipe to autoreply to all the
-incoming mail, you should of course insert it before all other recipes in your
-rcfile.  However, it is advisable to put it
+(like bouncing mail or mail from mailing-lists), nor autoreplies coming from
+yourself will be autoreplied to.  If this precaution would not be taken,
+disaster could result (`ringing' mail).  In order for this recipe to autoreply
+to all the incoming mail, you should of course insert it before all other
+recipes in your rcfile.  However, it is advisable to put it
 .I after
 any recipes that process the mails from subscribed mailinglists; it generally
 is not a good idea to generate autoreplies to mailinglists (yes, the
 !^FROM_DAEMON regexp should already catch those, but if the mailinglist
 doesn't follow accepted conventions, this might not be enough).
-.Sx 4
+.Sx 6
 :0 @PASS_HEAD@ @CONTINUE@
 * !^FROM_DAEMON
-* !^From +YOUR_USERNAME
-| (formail \-@FM_REPLY@ \-@FM_ADD_ALWAYS@"Precedence: junk";\e
+* !^X-Loop: your@own.mail.address
+| (formail \-@FM_REPLY@ \-@FM_ADD_ALWAYS@"Precedence: junk" \e
+    \-@FM_ADD_ALWAYS@"X-Loop: your@own.mail.address" ; \e
    echo "Mail received.") | $SENDMAIL \-t
 .Ex
 A more complicated autoreply recipe that implements the functional equivalent
@@ -148,24 +146,25 @@ database and an autoreply will be sent.  To reliably extract the name of the
 sender, I let formail generate an autoreply header (thereby making it figure
 out the most appropriate sender address), and then telling it to extract the
 value of the `To:' field.
-.Sx 17
+.Sx 19
 SHELL=/bin/sh    # for other shells, this might need adjustment
 
 :0
 * !^FROM_DAEMON
-* !^From +YOUR_USERNAME
+* !^X-Loop: your@own.mail.address
 {
   FROM=`formail \-@FM_REPLY@@FM_EXTRACT@ To:`
   ALREADYSENT=$HOME/vacation     # the vacation database
 
   :0 @CONTINUE@:                       # the lockfile is important
   * !? fgrep \-e "$FROM" $ALREADYSENT
-  | echo $FROM >>$ALREADYSENT; \e
-    (formail \-@FM_REPLY@@FM_ADD_ALWAYS@"Precedence: junk"; \e
-      echo "I received your mail,"; \e
-      echo "but I won't be back until Monday."; \e
-      echo "-- "; cat $HOME/.signature \e
-    ) | $SENDMAIL \-t
+  | echo "$FROM" >>$ALREADYSENT; \e
+    (formail \-@FM_REPLY@@FM_ADD_ALWAYS@"Precedence: junk" \e
+       \-@FM_ADD_ALWAYS@"X-Loop: your@own.mail.address" ; \e
+     echo "I received your mail,"; \e
+     echo "but I won't be back until Monday."; \e
+     echo "-- "; cat $HOME/.signature \e
+    ) | $SENDMAIL \-oi \-t
 }
 .Ex
 Store all messages concerning TeX in separate, unique filenames, in a directory
@@ -177,7 +176,7 @@ in this case, so we won't.
 texmail
 .Ex
 The same as above, except now we store the mails in numbered files (MH mail
-folder), again the texmail directory should exist already.
+folder).
 .Sx 3
 :0
 * (^TO|^Subject:.*)TeX[^t]
@@ -332,15 +331,16 @@ sender.  Like in all recipes where we send mail, we watch out for mail
 loops.
 .Sx 6
 :0
-* !^From +YOUR_USERNAME
+* !^@FROM@+YOUR_USERNAME
 * !^Subject:.*Re:
 * !^FROM_DAEMON
 * ^Subject:.*retrieve
 | (formail \-@FM_REPLY@ ; cat info_file) | $SENDMAIL \-oi \-t
 .Ex
 Now follows an example for a very simple fileserver accessible by mail.
-For more demanding applications, I suggest you take a look at the mailinglist
-package included with the procmail source distribution.  The most notable
+For more demanding applications, I suggest you take a look at
+.B SmartList
+(available from the same place as the procmail distribution).  The most notable
 deficiency of the `fileserver' you see below is that it doesn't do any
 access checking.  It simply looks at the Subject: field in the header and
 extracts the names mentioned after the word `request'.  These names are
@@ -357,7 +357,7 @@ script to take care of the more complicated checks and operations.
   MAILDIR=$HOME/fileserver   # chdir to the fileserver directory
 
   :0 @PASS_HEAD@             # extract the requested filename(s)
-  FILES=| sed \-n \-e 's/^Subject:.*request \(.*\)/\1/p'
+  FILES=| sed \-n \-e 's/^Subject:.*request \e(.*\e)/\e1/p'
 
   :0 @FILTER@                # reverse the mailheader
   | formail \-@FM_REPLY@@FM_ADD_ALWAYS@ "X-Loop: yourname@your.main.mail.address"
@@ -368,22 +368,23 @@ script to take care of the more complicated checks and operations.
 .Ex
 The following example preconverts all plain-text mail arriving in certain
 encoded MIME formats into a more compact 8-bit format which can be used
-and displayed more easily by most programs.  The mmencode program is part
-of Nathaniel Borenstein's metamail package.
+and displayed more easily by most programs.  The
+.BR mimencode (1)
+program is part of Nathaniel Borenstein's metamail package.
 .Sx 17
 :0
 * ^Content-Type: *text/plain
 {
   :0 @FILTER@@PASS_BODY@@WAIT_EXIT@
   * ^Content-Transfer-Encoding: *quoted-printable
-  | mmencode \-u \-q
+  | mimencode \-u \-q
 
      :0 @ALSO_NEXT_RECIPE@@FILTER@@PASS_HEAD@@WAIT_EXIT@
      | formail \-@FM_DEL_INSERT@ "Content-Transfer-Encoding: 8bit"
 
   :0 @FILTER@@PASS_BODY@@WAIT_EXIT@
   * ^Content-Transfer-Encoding: *base64
-  | mmencode \-u \-b
+  | mimencode \-u \-b
 
      :0 @ALSO_NEXT_RECIPE@@FILTER@@PASS_HEAD@@WAIT_EXIT@
      | formail \-@FM_DEL_INSERT@ "Content-Transfer-Encoding: 8bit"
@@ -400,7 +401,7 @@ increase LINEBUF if necessary):
 URGMATCH=`cat $HOME/.urgent`
 
 :0 @BODY_GREP@:
-* $^From.*${URGMATCH}.*
+* $^From.*${URGMATCH}
 urgent
 .Ex
 An entirely different application for procmail would be to conditionally
@@ -420,7 +421,7 @@ DEFAULT=|     # pipe to stdout instead of
               # delivering mail as usual
 :0 @BODY_GREP@@FILTER@@PASS_BODY@@WAIT_EXIT@
 * [=0x80=-=0xff=]
-| mmencode -q
+| mimencode \-q
 
   :0 @ALSO_NEXT_RECIPE@@FILTER@@PASS_HEAD@@WAIT_EXIT@
   | formail \-I 'MIME-Version: 1.0' \e
@@ -445,6 +446,7 @@ DEFAULT=|     # pipe to stdout instead of
 .BR grep (1),
 .BR biff (1),
 .BR comsat (8),
+.BR mimencode (1),
 .BR lockfile (1),
 .BR formail (1)
 .hy
