--- a/man/procmailrc.man
+++ b/man/procmailrc.man
@@ -1,12 +1,12 @@
 Please read the README file in this directory first.
 .ex
-.Id $Id: procmailrc.man,v 1.41 1994/05/26 14:12:11 berg Exp $
+.Id $Id: procmailrc.man,v 1.47 1994/08/23 14:47:25 berg Exp $
 .TH PROCMAILRC 5 \*(Dt BuGless
 .na
 .SH NAME
 procmailrc \- procmail rcfile
 .SH SYNOPSIS
-.B $HOME/@PROCMAILRC@
+.B @PROCMAILRC@
 .ad
 .SH DESCRIPTION
 For a quick start, see
@@ -20,17 +20,42 @@ of which have special meanings to procmail), and recipes.  In their most
 simple appearance, the recipes are simply one line regular expressions
 that are searched for in the header of the arriving mail, the first recipe
 that matches is used to determine where the mail has to go (usually a file).
+If processing falls off the end of the rcfile, procmail will deliver the mail
+to
+.BR $DEFAULT .
 .PP
-If a matching recipe does not specify any special flags (like `@FILTER@' or
-`@CONTINUE@') and the recipe is successful (i.e. no write failures or other
-calamities), then processing of the rcfile will cease at this point, and
-procmail will consider the mail to have been delivered.
+There are two kinds of recipes: delivering and non-delivering recipes.
+If a
+.I delivering recipe
+is found to match, procmail considers the mail (you guessed it) delivered and
+will
+.I cease processing
+the rcfile after having successfully executed the action line of the recipe.
+If a
+.I non-delivering recipe
+is found to match, processing of the rcfile will
+.I continue
+after the action line of this recipe has been executed.
 .PP
-This enables you to presort your mail extremely straightforward into several
-mailfolders.  Bear in mind though that the mail can arrive concurrently in
-these mailfolders (if several procmail programs happen to run at the same time,
-not unlikely if a lot of mail arrives), to make sure this does not result in a
-mess, proper use of lockfiles is highly recommended.
+Delivering recipes are those that cause header and/or body of the mail to
+be: written into a file, absorbed by a program or forwarded to a mailaddress.
+.PP
+Non-delivering recipes are those that cause the output of a program or
+filter to be captured back by procmail or those that start a nesting block.
+.PP
+You can tell procmail to treat a
+.I delivering recipe
+as if it were a non-delivering recipe by specifying the `@CONTINUE@' flag on
+such a recipe.  This will make procmail
+.I continue
+processing the rcfile even if it just delivered successfully to this recipe.
+.PP
+By using any number of recipes you can presort your mail extremely
+straightforward into several mailfolders.  Bear in mind though that the mail
+can arrive concurrently in these mailfolders (if several procmail programs
+happen to run at the same time, not unlikely if a lot of mail arrives), to
+make sure this does not result in a mess, proper use of lockfiles is highly
+recommended.
 .PP
 The environment variable
 .B assignments
@@ -43,7 +68,7 @@ want by specifying a new
 .BR MAILDIR ,
 switch lockfiles by specifying a new
 .BR LOCKFILE ,
-change the umask at any time, etc., the possibilities are endless :-).
+change the umask at any time, etc., the possibilities are endless :\-).
 .PP
 The assignments and substitutions of these environment variables are handled
 exactly like in
@@ -138,8 +163,10 @@ Consider the pipe as a filter.
 .TP
 .B @CONTINUE@
 Continue processing the rcfile even if this recipe matches (not needed
-when `@FILTER@' is specified).  On nesting blocks this will clone the
-running procmail process (lockfiles can not be inherited).
+when procmail has to read back the output (e.g. from a filter), nor on the
+start of a nesting block).  If you do specify it on a nesting block this will
+clone the running procmail process (lockfiles will not be inherited), whereas
+the clone will proceed as usual and the parent will jump across the block.
 .TP
 .B @WAIT_EXIT@
 Wait for the filter or program to finish and check its exitcode (normally
@@ -208,6 +235,13 @@ pipe the mail to stdout.
 Followed by at least one space, tab or newline will mark the start of a
 nesting block.  Everything up till the next closing brace will depend on
 the conditions specified for this recipe.  Unlimited nesting is permitted.
+The closing brace exists merely to delimit the block, it will
+.I not
+cause procmail to terminate in any way.  If the end of a block is reached
+processing will continue as usual after the block.
+On a nesting block, the flags `@HEAD_GREP@' and `@BODY_GREP@' only affect
+the conditions leading up to the block, the flags `@PASS_HEAD@' and
+`@PASS_BODY@' have no effect whatsoever.
 .PP
 Anything else will be taken as a mailbox name (either a filename or a
 directory, absolute or relative to the current directory (see MAILDIR)).
@@ -232,6 +266,8 @@ Your (the recipient's) defaults
 .TP
 .BR ORGMAIL
 \&@SYSTEM_MBOX@
+.br
+(Unless \-@MAILFILTOPT@ has been specified, in which case it is unset)
 .TP
 .B MAILDIR
 \&@DEFmaildir@
@@ -276,7 +312,7 @@ to this mailbox.
 .TP
 .B LOGFILE
 This file will also contain any error or diagnostic messages from procmail
-(normally none :-) or any other programs started by procmail.  If this file
+(normally none :\-) or any other programs started by procmail.  If this file
 is not specified, any diagnostics or error messages will
 @pconsole@@console@@aconsole@
 See also
@@ -301,7 +337,7 @@ Anything assigned to this variable will be appended to $LOGFILE.
 Usually the system mailbox (\fBOR\fPi\fBG\fPinal \fBMAIL\fPbox).  If, for
 some obscure reason (like `\fBfilesystem full\fP') the mail could not be
 delivered, then this mailbox will be the last resort.  If procmail
-fails to save the mail in here (deep, deep trouble :-), then the mail
+fails to save the mail in here (deep, deep trouble :\-), then the mail
 will bounce back to the sender.
 .TP
 .B LOCKFILE
@@ -358,7 +394,7 @@ are exhausted, the program will terminate, but will not generate an error
 (i.e. to the mailer it will seem that the mail has been delivered).
 .TP
 .B UMASK
-The name says it all (if it doesn't, then forget about this one :-).
+The name says it all (if it doesn't, then forget about this one :\-).
 Anything assigned to UMASK is taken as an
 .B octal
 number.  If not specified, the umask defaults to @INIT_UMASK@.  If the umask
@@ -418,8 +454,8 @@ be a binary file for that matter.
 .TP
 .B DELIVERED
 If set to `yes' procmail will pretend (to the mail agent) the mail
-has been delivered.  If mail cannot be delivered after meeting this
-assignment (to `yes'), the mail will be lost (i.e. it will not bounce).
+has been delivered.  If mail cannot be delivered after having met this
+assignment (set to `yes'), the mail will be lost (i.e. it will not bounce).
 .TP
 .B TRAP
 When procmail terminates it will execute the contents of this variable.
@@ -568,6 +604,9 @@ use
 .I absolute
 paths to specify global lockfiles).
 .PP
+A locallockfile on the recipe that marks the start of a nested block
+does not work as expected.
+.PP
 When capturing stdout from a recipe into an environment variable, exactly
 one trailing newline will be stripped.
 .PP
@@ -577,6 +616,8 @@ matches.
 .PP
 When the regular expression starts with `^^' it will anchor the match
 at the very start of the text.
+When the regular expression ends with `^^' it will anchor the match
+at the very end of the text.
 .PP
 The start and end of a word can be matched by `\e<' and `\e>'.  They
 are merely a shorthand for `[^a-zA-Z0-9_]', but can also match newlines.
@@ -597,7 +638,7 @@ substituted by
 .nh
 `\fB@FROMDsubstitute@\fP',
 which should catch mails coming from most daemons (how's that for a regular
-expression :-).
+expression :\-).
 .hy
 .ad
 .PP
@@ -614,7 +655,7 @@ which should catch mails coming from most mailer-daemons.
 When assigning boolean values to variables like VERBOSE, DELIVERED or COMSAT,
 procmail accepts as true every string starting with: a non-zero value, `on',
 `y', `t' or `e'.  False is every string starting with: a zero value, `off',
-`n', `f' or 'd'.
+`n', `f' or `d'.
 .PP
 If the action line of a recipe specifies a program, a sole backslash-newline
 pair in it on an otherwise empty line will be converted into a newline.
